--- a/0-bootstrap/single-cluster/1-infra/kustomization.yaml
+++ b/0-bootstrap/single-cluster/1-infra/kustomization.yaml
@@ -18,8 +18,8 @@ resources:
 #- argocd/namespace-spp-velero.yaml
 #- argocd/namespace-baas.yaml
 #- argocd/serviceaccounts-ibm-common-services.yaml
-#- argocd/serviceaccounts-tools.yaml
-#- argocd/scc-wkc-iis.yaml
+- argocd/serviceaccounts-tools.yaml
+- argocd/scc-wkc-iis.yaml
 #- argocd/storage.yaml
 #- argocd/infraconfig.yaml
 #- argocd/machinesets.yaml
