--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -28,10 +28,10 @@ resources:
 #- argocd/instances/ibm-cpd-scheduling-instance.yaml
 - argocd/operators/ibm-cpd-platform-operator.yaml
 - argocd/instances/ibm-cpd-instance.yaml
-#- argocd/operators/ibm-cpd-ws-operator.yaml
-#- argocd/instances/ibm-cpd-ws-instance.yaml
-#- argocd/operators/ibm-cpd-wkc-operator.yaml
-#- argocd/instances/ibm-cpd-wkc-instance.yaml
+# - argocd/operators/ibm-cpd-ws-operator.yaml
+# - argocd/instances/ibm-cpd-ws-instance.yaml
+- argocd/operators/ibm-cpd-wkc-operator.yaml
+- argocd/instances/ibm-cpd-wkc-instance.yaml
 
 ## Cloud Pak for Security
 #- argocd/operators/ibm-cp4s-operator.yaml
